--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header
     text-align:center;
     text-decoration:none;
     font-weight:bold;
+    font-size:120%;
 }
 section
 {
@@ -34,7 +35,7 @@ section
 	margin:auto;
 	margin-top:50px;
 	border-radius: 200px 200px;
-	background:url(img/logo1.png)center no-repeat;
+	background:url(img/logo.png)center no-repeat;
 }
 
 .carre
