débug pb accent

--- a/style.css
+++ b/style.css
@@ -176,8 +176,8 @@ h3
 }
 .news p
 {
-    background-color:red;
-    margin-top:0px;
+    background-color: white;
+    margin-top:10px;
 }
 .news
 {
