débug pb accent

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ section
 	margin:auto;
 	margin-top:50px;
 	border-radius: 200px 200px;
-	background:url(img/logo.png)center no-repeat;
+	background:url(img/logo1.png)center no-repeat;
 }
 
 .carre
